--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 <title>Page Title</title>
 </head>
 <body>
-
-<h1>This is a heading</h1>
-<p>This is a paraghaph.</p>
-
+  <h1>Rules of hp robotics programming</h1>
+  <div>
+    <ol>
+      <li>All team laptops use the github user "einstein2823"</li>
+      <li>Personal computers use your own github accounts</li>
+      <li>
+        <p>Helpful links</p>
+        <ul>
+          <li>Chief Delphi: www.chiefdelphi.com</li>
+          <li>WPI Lib: Docs.wpilib.org</li>
+        </ul>
+      </li>
+    </ol>  
+  
+  </div>  
 </body>
 </html>
