--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <ol>
       <li>All team laptops use the github user "einstein2823"</li>
       <li>Personal computers use your own github accounts</li>
-      <li>
-        <p>Helpful links</p>
+      <li>Helpful links
         <ul>
           <li>Chief Delphi: www.chiefdelphi.com</li>
           <li>WPI Lib: Docs.wpilib.org</li>
         </ul>
       </li>
+      <li>All robot code is located under "Automatons Code" from the shortcut on the desktop or in C:/Users/<Owner>/Automatons Code</li>
     </ol>  
   
   </div>  
