Add instructions to clone a repo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Page Title</title>
 </head>
 <body>
-  <h1>Rules of hp robotics programming</h1>
+  <h1>Rules of HP robotics programming</h1>
   <div>
     <ol>
       <li>All team laptops use the github user "einstein2823"</li>
@@ -16,6 +16,14 @@
         </ul>
       </li>
       <li>All robot code is located under "Automatons Code" from the shortcut on the desktop or in C:/Users/<Owner>/Automatons Code</li>
+      <li>To get new code from GitHub, do the following:
+        <ul>
+          <li>Go to our github.com page and click on the green clone icon and copy the git https URL</li>
+          <li>In Visual Studio Code, do File..Open and open the directory that corresponds to Automatons Code.</li>
+          <li>Select Terminal..New</li>
+          <li>Type <pre>git clone </pre>pre> and then paste the git URL and hit enter</li>
+        </ul>
+      </li>
     </ol>  
   
   </div>  
