--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Page Title</title>
 </head>
 <body>
-  <h1>Rules of HP robotics programming</h1>
+  <h1>Rules of HP Robotics Programming</h1>
   <div>
     <ol>
       <li>All team laptops use the github user "einstein2823"</li>
