--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>HP Robotics Rules</title>
 </head>
 <body>
   <h1>Rules of HP Robotics Programming</h1>
@@ -21,7 +21,7 @@
           <li>Go to our github.com page and click on the green clone icon and copy the git https URL</li>
           <li>In Visual Studio Code, do File..Open and open the directory that corresponds to Automatons Code.</li>
           <li>Select Terminal..New</li>
-          <li>Type <pre>git clone </pre>pre> and then paste the git URL and hit enter</li>
+          <li>Type <pre>git clone </pre> and then paste the git URL and hit enter</li>
         </ul>
       </li>
     </ol>  
