Remove username from public site

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <h1>Rules of HP Robotics Programming</h1>
   <div>
     <ol>
-      <li>All team laptops use the github user "einstein2823"</li>
-      <li>Personal computers use your own github accounts</li>
+      <li>All team laptops use the team GitHub user. Ask a teammate or a mentor if you are unsure which user this is.</li>
+      <li>Personal computers use your own GitHub accounts.</li>
       <li>Helpful links
         <ul>
           <li>Chief Delphi: www.chiefdelphi.com</li>
