Update link formatting

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <li>Personal computers use your own GitHub accounts.</li>
       <li>Helpful links
         <ul>
-          <li>Chief Delphi: www.chiefdelphi.com</li>
-          <li>WPI Lib: Docs.wpilib.org</li>
+          <li><a href="https://www.chiefdelphi.com">Chief Delphi</a></li>
+          <li><a href="https://docs.wpilib.org">WPILib</a></li>
         </ul>
       </li>
       <li>All robot code is located under "Automatons Code" from the shortcut on the desktop or in C:/Users/<Owner>/Automatons Code</li>
